test_regress/t/t_langext_3_bad.out
%Error: t/t_langext_3.v:20:4: Can't find typedef/interface: 'uwire'
   20 |    uwire w;   
      |    ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
